--- a/webimage/templates/webimage/index.html
+++ b/webimage/templates/webimage/index.html
@@ -1,4 +1,9 @@
 {% extends "webimage/main.html" %}
 {% block content %}
     <p class="">Welcome to DeepImage!</p>
+    <form action="/" method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit">
+    </form>
 {% endblock %}
