Added login / register urls, views, forms, templates ( not yet functional ), icons and style

--- a/webimage/static/webimage/css/main.css
+++ b/webimage/static/webimage/css/main.css
@@ -1,3 +1,15 @@
-.bg-primary {
-    background: #359e43 !important;
+.bg-deepimage {
+    background: #1a657b !important;
+}
+
+.logo {
+    image-rendering: pixelated;
+}
+
+html, body {
+    background-color: #d9edf3 !important;
+}
+
+.navbar {
+    height: 50px;
 }
