--- a/webimage/templates/webimage/main.html
+++ b/webimage/templates/webimage/main.html
@@ -1,58 +1,55 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% if title %}{{ title }}{% endif %}</title>
-    <!-- Main javascript and css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'webimage/css/main.css' %}" />
-    <script src="{% static 'webimage/js/main.js' %}"></script>
-    <!-- Bootstrap local -->
-    <link rel="stylesheet" type="text/css" href="{% static 'webimage/bootstrap/css/bootstrap.css' %}" />
-    <script src="{% static 'webimage/js/jquery-3.3.1.min.js' %}"></script>
-    <script src="{% static 'webimage/bootstrap/js/bootstrap.js' %}"></script>
-    <!-- Others -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>{% if title %}{{ title }}{% endif %}</title>
+  <!-- Main javascript and css -->
+  <link rel="stylesheet" type="text/css" href="{% static 'webimage/css/main.css' %}" />
+  <script src="{% static 'webimage/js/main.js' %}"></script>
+  <link rel="icon" href="{% static 'webimage/img/deepimage.png' %}" type="image/x-icon" />
+  <!-- Bootstrap local -->
+  <link rel="stylesheet" type="text/css" href="{% static 'webimage/bootstrap/css/bootstrap.css' %}" />
+  <script src="{% static 'webimage/js/jquery-3.3.1.min.js' %}"></script>
+  <script src="{% static 'webimage/bootstrap/js/bootstrap.js' %}"></script>
+  <!-- Others -->
 </head>
+
 <body>
-    <!-- Navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Navbar</a>`
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-            </div>
-          </nav>
-    <!-- Content -->
-    {% block content %}
-    {% endblock %}
+  <!-- Navigation bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-deepimage">
+    <a class="navbar-brand" href="{% url 'webimage:index' %}">
+      <img src="{% static 'webimage/img/deepimage_white.png' %}" width="30" height="30" class="d-inline-block align-top logo" alt="">
+      <span>Deepimage</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'webimage:index' %}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'webimage:gallery' %}">Gallery</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'webimage:login' %}">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'webimage:register' %}">Register</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- Content -->
+  {% block content %}{% endblock %}
 </body>
+
 </html>
