--- a/webimage/templates/webimage/auth/register.html
+++ b/webimage/templates/webimage/auth/register.html
@@ -1,3 +1,40 @@
-{% extends 'webimage/main.html' %} 
-{% block content %}
+{% extends 'webimage/main.html' %} {% block content %}
+<div class="col-lg-4 offset-lg-4 col-md-6 offset-md-3 col-sm-10 offset-sm-1 mt-5 mb-5">
+    <div class="card">
+        <div class="card-header text-center text-white bg-di-lighter">Register</div>
+        <form class="m-2" action="{% url 'webimage:register' %}" method="post">
+            {% csrf_token %} {{ form.non_field_errors }} {% for field, errors in form.errors.items %} {% for error in errors %}
+            <div class="alert alert-danger">
+                <span>{{ error }}</span>
+            </div>
+            {% endfor %} {% endfor %}
+            <div class="form-group">
+                <label for="{{ form.username.id_for_label }}">Username :</label>
+                {{ form.username }}
+                <small id="emailHelp" class="form-text text-muted">The username will be public.</small>
+            </div>
+            <div class="form-group">
+                <label for="{{ form.email.id_for_label }}">Email :</label>
+                {{ form.email }}
+            </div>
+            <div class="form-group">
+                <label for="{{ form.first_name.id_for_label }}">Frist Name :</label>
+                {{ form.first_name }}
+            </div>
+            <div class="form-group">
+                <label for="{{ form.first_name.id_for_label }}">Last Name :</label>
+                {{ form.last_name }}
+            </div>
+            <div class="form-group">
+                <label for="{{ form.password.id_for_label }}">Password :</label>
+                {{ form.password }}
+            </div>
+            <div class="form-group">
+                <label for="{{ form.confirm_password.id_for_label }}">Confirm password :</label>
+                {{ form.confirm_password }}
+            </div>
+            <button type="submit" class="btn btn-primary mt-2">Submit</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
