--- a/webimage/templates/webimage/auth/login.html
+++ b/webimage/templates/webimage/auth/login.html
@@ -25,7 +25,7 @@
                 {{ form.remember }}
                 <label class="form-check-label" for="{{ form.remember.id_for_label }}">Remember me</label>
             </div>
-            <button type="submit" class="btn btn-primary mt-2">Submit</button>
+            <button type="submit" class="btn btn-primary mt-2">Log in</button>
         </form>
     </div>
 </div>
