--- a/webimage/templates/webimage/index.html
+++ b/webimage/templates/webimage/index.html
@@ -1,4 +1,4 @@
 {% extends "webimage/main.html" %}
 {% block content %}
-<p>Hello, welcome to DeepImage!</p>
+<!-- <p>Hello, welcome to DeepImage!</p> -->
 {% endblock %}
