--- a/webimage/templates/webimage/main.html
+++ b/webimage/templates/webimage/main.html
@@ -19,9 +19,9 @@
 
 <body>
   <!-- Navigation bar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-deepimage">
+  <nav class="main-navbar navbar navbar-expand-lg navbar-dark bg-deepimage">
     <a class="navbar-brand" href="{% url 'webimage:index' %}">
-      <img src="{% static 'webimage/img/deepimage_white.png' %}" width="30" height="30" class="d-inline-block align-top logo" alt="">
+      <img src="{% static 'webimage/img/deepimage.png' %}" width="30" height="30" class="d-inline-block align-top logo" alt="">
       <span>Deepimage</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
