--- a/webimage/templates/webimage/auth/register.html
+++ b/webimage/templates/webimage/auth/register.html
@@ -33,7 +33,7 @@
                 <label for="{{ form.confirm_password.id_for_label }}">Confirm password :</label>
                 {{ form.confirm_password }}
             </div>
-            <button type="submit" class="btn btn-primary mt-2">Submit</button>
+            <button type="submit" class="btn btn-primary mt-2 col-3">Sign up</button>
         </form>
     </div>
 </div>
