--- a/webimage/static/webimage/css/main.css
+++ b/webimage/static/webimage/css/main.css
@@ -1,5 +1,5 @@
 .bg-deepimage {
-    background: #0c3d4d !important;
+    background: #1d5263 !important;
 }
 
 .bg-di-lighter {
@@ -11,15 +11,11 @@
 }
 
 body {
-    /* background-color: #d9edf3 !important; */
-    background-image: url('../img/wallpaper.jpg');
-    background-size: auto 100%;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-color: #bbd3da !important;
 }
 
 .main-navbar {
-    height: 40px;
+    height: 45px;
     position: fixed !important;
     z-index: 1;
     width: 100%;
@@ -27,7 +23,7 @@ body {
 }
 
 .content {
-    margin-top: 80px;
+    margin-top: 120px;
 }
 
 .card {
