--- a/webimage/templates/webimage/gallery/user.html
+++ b/webimage/templates/webimage/gallery/user.html
@@ -7,6 +7,6 @@
         <div class="nav-link"> ></div>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'webimage:gallery_user' user.username %}">{{ user.username }}</a>
+        <a class="nav-link" href="{% url 'webimage:gallery_user' profile.username %}">{{ profile.username }}</a>
     </li>
 {% endblock %}
