--- a/webimage/templates/webimage/gallery/user.html
+++ b/webimage/templates/webimage/gallery/user.html
@@ -75,7 +75,7 @@
 {% endblock %}
 {% block gallery %}
     {% for album in albums %}
-         <div class="col-sm-6 col-md-4 col-lg-3">
+         <div class="col-sm-6 col-md-4 col-lg-3 mt-2 mb-2">
                 <div class="card">
                     <div class="card-header text-center">
                         <a class="card-link" href="{% url 'webimage:gallery_user_album' profile.username album.album.id %}">
