--- a/webimage/templates/webimage/gallery/users.html
+++ b/webimage/templates/webimage/gallery/users.html
@@ -15,7 +15,7 @@
 {% block gallery %}
     {% if users|length > 0 %}
         {% for u in users %}
-            <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-2 mb-2">
                 <div class="card">
                     <div class="card-header text-center">
                         <a class="card-link" href="{% url 'webimage:gallery_user' u.user.username %}">
