added icons in headers and fixed new album spacing

--- a/webimage/templates/webimage/gallery/tags.html
+++ b/webimage/templates/webimage/gallery/tags.html
@@ -18,6 +18,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3 mt-2 mb-2">
                 <div class="card">
                     <div class="card-header text-center">
+                        <i class="fa fa-tag"></i>
                         <a class="card-link badge badge-secondary" href="{% url 'webimage:gallery_tags_tag' tag.tag %}">
                             <span class="text-primary"></span><span class="text">{{ tag.tag }}</span>
                         </a>
