--- a/webimage/templates/webimage/gallery/user.html
+++ b/webimage/templates/webimage/gallery/user.html
@@ -78,6 +78,7 @@
          <div class="col-sm-6 col-md-4 col-lg-3 mt-2 mb-2">
                 <div class="card">
                     <div class="card-header text-center">
+                        <i class="fa fa-folder-open"></i>
                         <a class="card-link" href="{% url 'webimage:gallery_user_album' profile.username album.album.id %}">
                             <span class="text">{{ album.album.name }}</span>
                         </a>
@@ -100,7 +101,7 @@
          </div>
     {%  endfor %}
     {% if user == profile %}
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-sm-6 col-md-4 col-lg-3 mt-2 mb-2">
                 <div class="card">
                     <div class="card-header text-center">
                         <a class="card-link" href="#"><i class="fa fa-plus-circle"></i> New album</a>
