--- a/webimage/templates/webimage/gallery/users.html
+++ b/webimage/templates/webimage/gallery/users.html
@@ -18,6 +18,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3 mt-2 mb-2">
                 <div class="card">
                     <div class="card-header text-center">
+                        <i class="fa fa-user-circle"></i>
                         <a class="card-link" href="{% url 'webimage:gallery_user' u.user.username %}">
                             <span class="text-primary">@</span><span class="text">{{ u.user.username }}</span>
                         </a>
