refactored tags aspect

--- a/webimage/templates/webimage/gallery/user.html
+++ b/webimage/templates/webimage/gallery/user.html
@@ -7,7 +7,7 @@
         <div class="nav-link"> ></div>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'webimage:gallery_user' profile.username %}">{{ profile.username }}</a>
+        <a class="nav-link disabled">{{ profile.username }}</a>
     </li>
 {% endblock %}
 {% block mainitem %}
