--- a/webimage/templates/webimage/gallery/tag.html
+++ b/webimage/templates/webimage/gallery/tag.html
@@ -7,6 +7,9 @@
         <div class="nav-link"> ></div>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'webimage:gallery_user' user.username %}">{{ user.username }}</a>
+        <a class="nav-link disabled"> {{ tag.tag }}</a>
     </li>
+{% endblock %}
+{% block mainitem %}
+
 {% endblock %}
