--- a/webimage/templates/webimage/gallery/tags.html
+++ b/webimage/templates/webimage/gallery/tags.html
@@ -17,11 +17,12 @@
         {% for tag in tags %}
             <div class="col-sm-6 col-md-4 col-lg-3 mt-2 mb-2">
                 <div class="card">
-                    <div class="card-header text-center">
-                        <a class="card-link badge badge-secondary" href="{% url 'webimage:gallery_tags_tag' tag.tag %}">
+                    <div class="card-header">
+                        <a class="card-link badge badge-secondary" href="{% url 'webimage:gallery_tags_tag' tag.tag.tag %}">
                         <i class="fa fa-tag"></i>
-                            <span class="text-primary"></span><span class="text">{{ tag.tag }}</span>
+                            <span class="text-primary"></span><span class="text">{{ tag.tag.tag }}</span>
                         </a>
+                        <span class="text-secondary float-right">{{ tag.usages }} usages</span>
                     </div>
                 </div>
             </div>
