added bg di 2xlighter for user

--- a/webimage/static/webimage/css/main.css
+++ b/webimage/static/webimage/css/main.css
@@ -35,6 +35,10 @@ body {
     background: #e5eef1 !important;
 }
 
+.bg-di-2xlighter {
+    background: #e5eef1 !important;
+}
+
 .content {
     margin-top: 80px;
 }
